--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>816</width>
-    <height>558</height>
+    <width>814</width>
+    <height>564</height>
    </rect>
   </property>
   <property name="font">
@@ -25,8 +25,8 @@
    <widget class="QFrame" name="frameTECController">
     <property name="geometry">
      <rect>
-      <x>172</x>
-      <y>100</y>
+      <x>170</x>
+      <y>70</y>
       <width>621</width>
       <height>421</height>
      </rect>
@@ -1443,9 +1443,9 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>20</y>
+      <y>10</y>
       <width>561</width>
-      <height>71</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -1480,7 +1480,7 @@
       <x>20</x>
       <y>30</y>
       <width>149</width>
-      <height>491</height>
+      <height>461</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -1683,7 +1683,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QWidget" name="" native="true">
+      <widget class="QWidget" name="widget" native="true">
        <layout class="QHBoxLayout" name="horizontalLayout_9">
         <item>
          <widget class="QLabel" name="labelCANErrors">
