--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -1460,7 +1460,7 @@
      <rect>
       <x>20</x>
       <y>20</y>
-      <width>91</width>
+      <width>71</width>
       <height>16</height>
      </rect>
     </property>
@@ -1480,7 +1480,7 @@
       <x>20</x>
       <y>40</y>
       <width>149</width>
-      <height>451</height>
+      <height>469</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -1764,6 +1764,25 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="labelHost">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>20</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
